--- a/EnDICTATION/Modules/Number/View/En_NumEnterView.xib
+++ b/EnDICTATION/Modules/Number/View/En_NumEnterView.xib
@@ -1,18 +1,118 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="En_NumEnterView">
+            <rect key="frame" x="0.0" y="0.0" width="408" height="184"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9O2-Af-3aA">
+                    <rect key="frame" x="69" y="81.5" width="40" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qed-5b-etg">
+                    <rect key="frame" x="219" y="81.5" width="20" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="KgU-aR-nGv"/>
+                        <constraint firstAttribute="width" constant="20" id="b2w-kp-hvE"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SaQ-AG-oES">
+                    <rect key="frame" x="124" y="77" width="80" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="UGH-Lq-7Ph"/>
+                        <constraint firstAttribute="width" constant="80" id="bdS-cp-jQ1"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="tel"/>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jAf-N4-4En">
+                    <rect key="frame" x="254" y="77" width="80" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="7xh-Oo-joi"/>
+                        <constraint firstAttribute="width" constant="80" id="YYN-lU-Ugq"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="tel"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="自定义范围" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZF-b9-bnG">
+                    <rect key="frame" x="160.5" y="36" width="87" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oPN-64-Tfp">
+                    <rect key="frame" x="99" y="134" width="50" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="5YT-fN-znc"/>
+                        <constraint firstAttribute="width" constant="50" id="ick-DA-e2V"/>
+                    </constraints>
+                    <state key="normal" title="取消">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="cancelCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="2r3-5r-cop"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OKp-9m-3cP">
+                    <rect key="frame" x="259" y="134" width="50" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="PM0-FU-Zi8"/>
+                        <constraint firstAttribute="height" constant="30" id="bhL-rT-ZjE"/>
+                    </constraints>
+                    <state key="normal" title="确定">
+                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="confirmCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="P0m-ef-ILS"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="9O2-Af-3aA" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="8zt-aq-BSM"/>
+                <constraint firstItem="SaQ-AG-oES" firstAttribute="top" secondItem="CZF-b9-bnG" secondAttribute="bottom" constant="20" id="Mit-kD-sKQ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="OKp-9m-3cP" secondAttribute="bottom" constant="20" id="VsB-eQ-kWr"/>
+                <constraint firstItem="oPN-64-Tfp" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" constant="-80" id="dbW-sn-IqJ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="oPN-64-Tfp" secondAttribute="bottom" constant="20" id="e2b-uK-CxZ"/>
+                <constraint firstItem="qed-5b-etg" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="iG1-VF-brh"/>
+                <constraint firstItem="jAf-N4-4En" firstAttribute="leading" secondItem="qed-5b-etg" secondAttribute="trailing" constant="15" id="mpE-c9-MJo"/>
+                <constraint firstItem="CZF-b9-bnG" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="oZ9-lY-pzi"/>
+                <constraint firstItem="SaQ-AG-oES" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" constant="-40" id="ovh-D3-LSw"/>
+                <constraint firstItem="SaQ-AG-oES" firstAttribute="leading" secondItem="9O2-Af-3aA" secondAttribute="trailing" constant="15" id="s79-Cn-6Po"/>
+                <constraint firstItem="SaQ-AG-oES" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="wAn-CM-dWu"/>
+                <constraint firstItem="OKp-9m-3cP" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" constant="80" id="xxk-xq-zKk"/>
+                <constraint firstItem="qed-5b-etg" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" constant="25" id="ybl-Es-7Lm"/>
+                <constraint firstItem="jAf-N4-4En" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="zEo-4u-h5O"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="cancelButton" destination="oPN-64-Tfp" id="9Ys-5g-ep9"/>
+                <outlet property="confirmButton" destination="OKp-9m-3cP" id="vFL-IW-WY9"/>
+                <outlet property="fromLabel" destination="9O2-Af-3aA" id="sZS-tJ-ftB"/>
+                <outlet property="fromTextField" destination="SaQ-AG-oES" id="jnW-K4-sSc"/>
+                <outlet property="toLabel" destination="qed-5b-etg" id="eaw-wL-Pc0"/>
+                <outlet property="toTextField" destination="jAf-N4-4En" id="ZDc-25-n59"/>
+                <outlet property="topLabel" destination="CZF-b9-bnG" id="nhr-O4-BQg"/>
+            </connections>
+            <point key="canvasLocation" x="-190" y="-132"/>
         </view>
     </objects>
 </document>
