--- a/EnDICTATION/Modules/Main/View/En_MainPageView.xib
+++ b/EnDICTATION/Modules/Main/View/En_MainPageView.xib
@@ -1,18 +1,119 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="En_MainPageView">
+            <rect key="frame" x="0.0" y="0.0" width="378" height="500"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CYQ02" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x73-5r-Gr8" userLabel="bgImageView">
+                    <rect key="frame" x="0.0" y="0.0" width="378" height="500"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3R8-S9-c9v">
+                    <rect key="frame" x="114" y="120" width="150" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="150" id="2hZ-x3-LAB"/>
+                        <constraint firstAttribute="height" constant="60" id="g7b-P8-lde"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="数字和日期">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="numCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="ovV-a5-cko"/>
+                    </connections>
+                </button>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPZ-D6-pCj" userLabel="日期听写">
+                    <rect key="frame" x="114" y="224" width="150" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="7ZK-SX-tbP"/>
+                        <constraint firstAttribute="width" constant="150" id="fT8-7l-nfD"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="听力笔记">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="dateBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="ar7-Zn-TCU"/>
+                    </connections>
+                </button>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNQ-wn-4oR" userLabel="单词听写">
+                    <rect key="frame" x="114" y="328" width="150" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="HUb-fa-NEG"/>
+                        <constraint firstAttribute="width" constant="150" id="hNl-8K-Iky"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="TO BE CONTI">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="vocaBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="9N7-F2-ChV"/>
+                    </connections>
+                </button>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTf-U6-thp">
+                    <rect key="frame" x="114" y="432" width="150" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="150" id="13g-M4-P0i"/>
+                        <constraint firstAttribute="height" constant="60" id="VDp-2T-yLL"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="句子听写">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="senBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="abK-IQ-g1Q"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tb8-8C-2a6">
+                    <rect key="frame" x="328" y="64" width="30" height="30"/>
+                    <state key="normal" image="En_MainSet"/>
+                    <connections>
+                        <action selector="settingCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="l5P-Fl-uLs"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="tb8-8C-2a6" secondAttribute="trailing" constant="20" id="5Lf-Ic-0IQ"/>
+                <constraint firstItem="x73-5r-Gr8" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="6HE-rz-GRX"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="x73-5r-Gr8" secondAttribute="bottom" id="Ai6-zn-Ld7"/>
+                <constraint firstItem="x73-5r-Gr8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="PzM-2G-KDe"/>
+                <constraint firstItem="RPZ-D6-pCj" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="SEl-8K-yHR"/>
+                <constraint firstItem="zTf-U6-thp" firstAttribute="top" secondItem="WNQ-wn-4oR" secondAttribute="bottom" constant="44" id="UnI-2J-kWw"/>
+                <constraint firstItem="3R8-S9-c9v" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="UpA-b5-2X5"/>
+                <constraint firstItem="3R8-S9-c9v" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="100" id="WEz-sY-1Gt"/>
+                <constraint firstItem="WNQ-wn-4oR" firstAttribute="top" secondItem="RPZ-D6-pCj" secondAttribute="bottom" constant="44" id="bfe-UU-tUm"/>
+                <constraint firstItem="RPZ-D6-pCj" firstAttribute="top" secondItem="3R8-S9-c9v" secondAttribute="bottom" constant="44" id="bq3-nR-7dD"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="x73-5r-Gr8" secondAttribute="trailing" id="d2z-qE-3og"/>
+                <constraint firstItem="WNQ-wn-4oR" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="jyQ-ZI-FJy"/>
+                <constraint firstItem="zTf-U6-thp" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="laP-j3-A9P"/>
+                <constraint firstItem="tb8-8C-2a6" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="44" id="z5Y-nJ-4tz"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="bgImageView" destination="x73-5r-Gr8" id="8Bg-HN-VpC"/>
+                <outlet property="dateBtn" destination="RPZ-D6-pCj" id="EaN-YN-TTO"/>
+                <outlet property="numBtn" destination="3R8-S9-c9v" id="gQf-af-hTa"/>
+                <outlet property="senBtn" destination="zTf-U6-thp" id="VqL-r8-Zrq"/>
+                <outlet property="settingBtn" destination="tb8-8C-2a6" id="DGx-yO-dOf"/>
+                <outlet property="vocaBtn" destination="WNQ-wn-4oR" id="7XV-M3-qsz"/>
+            </connections>
+            <point key="canvasLocation" x="356.80000000000001" y="-10.794602698650676"/>
         </view>
     </objects>
+    <resources>
+        <image name="CYQ02" width="270" height="480"/>
+        <image name="En_MainSet" width="30" height="30"/>
+    </resources>
 </document>
