--- a/EnDICTATION/Modules/Number/View/En_NumConBar.xib
+++ b/EnDICTATION/Modules/Number/View/En_NumConBar.xib
@@ -1,18 +1,83 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="En_NumConBar">
+            <rect key="frame" x="0.0" y="0.0" width="380" height="59"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EdJ-DY-p8g" userLabel="Range">
+                    <rect key="frame" x="30" y="15" width="29" height="29"/>
+                    <state key="normal" image="En_Num">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="rangeCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="FA4-Zh-22K"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4C-bZ-UEb" userLabel="Rate">
+                    <rect key="frame" x="318" y="13.5" width="32" height="32"/>
+                    <state key="normal" image="En_Rate">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="rateCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="mkA-6q-vj6"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Czn-uX-1hk" userLabel="Play">
+                    <rect key="frame" x="166" y="5.5" width="48" height="48"/>
+                    <state key="normal" image="En_Play">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <state key="selected" image="En_Stop"/>
+                    <connections>
+                        <action selector="playCli:" destination="iN0-l3-epB" eventType="touchUpInside" id="DiH-Ft-fFK"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q69-SU-u8X" userLabel="line">
+                    <rect key="frame" x="10" y="58" width="360" height="1"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="d9q-Ae-Pum"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="q69-SU-u8X" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="2ho-K4-gGj"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="N4C-bZ-UEb" secondAttribute="trailing" constant="30" id="Cqm-Ib-OfM"/>
+                <constraint firstItem="Czn-uX-1hk" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="HiY-tJ-ZjK"/>
+                <constraint firstItem="N4C-bZ-UEb" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="O6r-AU-ihA"/>
+                <constraint firstItem="Czn-uX-1hk" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="OcJ-Un-VSO"/>
+                <constraint firstAttribute="trailing" secondItem="q69-SU-u8X" secondAttribute="trailing" constant="10" id="Ox8-uz-ofZ"/>
+                <constraint firstItem="EdJ-DY-p8g" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="USl-XR-kSc"/>
+                <constraint firstItem="EdJ-DY-p8g" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="Ugu-Ql-jBO"/>
+                <constraint firstAttribute="bottom" secondItem="q69-SU-u8X" secondAttribute="bottom" id="hUM-rq-8oA"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="line" destination="q69-SU-u8X" id="Kha-9I-Bn1"/>
+                <outlet property="playBtn" destination="Czn-uX-1hk" id="aOZ-hw-dK6"/>
+                <outlet property="rangeBtn" destination="EdJ-DY-p8g" id="lEn-SH-rcE"/>
+                <outlet property="rateBtn" destination="N4C-bZ-UEb" id="yas-D1-3Jw"/>
+            </connections>
+            <point key="canvasLocation" x="134.40000000000001" y="-170.46476761619192"/>
         </view>
     </objects>
+    <resources>
+        <image name="En_Num" width="29" height="29"/>
+        <image name="En_Play" width="48" height="48"/>
+        <image name="En_Rate" width="32" height="32"/>
+        <image name="En_Stop" width="40" height="40"/>
+    </resources>
 </document>
