--- a/EnDICTATION/Modules/Number/View/En_NumOptCell.xib
+++ b/EnDICTATION/Modules/Number/View/En_NumOptCell.xib
@@ -1,7 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,10 +15,38 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fd-lu-rPP">
+                        <rect key="frame" x="10" y="5" width="305" height="28.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOb-fy-g3h" userLabel="Line">
+                        <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Non-D5-ohd"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="BOb-fy-g3h" secondAttribute="bottom" id="7Nb-Yn-3Lo"/>
+                    <constraint firstItem="BOb-fy-g3h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Hl2-h4-9Wh"/>
+                    <constraint firstItem="9fd-lu-rPP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="WbG-co-0qz"/>
+                    <constraint firstItem="9fd-lu-rPP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ciW-CM-05E"/>
+                    <constraint firstAttribute="trailing" secondItem="BOb-fy-g3h" secondAttribute="trailing" id="eaf-dR-h7G"/>
+                    <constraint firstAttribute="bottom" secondItem="9fd-lu-rPP" secondAttribute="bottom" constant="10" id="i1k-wl-ggx"/>
+                    <constraint firstAttribute="trailing" secondItem="9fd-lu-rPP" secondAttribute="trailing" constant="5" id="tY7-Yh-TB6"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="line" destination="BOb-fy-g3h" id="JUV-eb-4w5"/>
+                <outlet property="titleLabel" destination="9fd-lu-rPP" id="Aq8-9S-1UX"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
